log
gcc -Wall -Wno-switch -Wno-unused-variable -c utils/cmdutils.c -o utils/cmdutils.o -I. -I./include/SDL2 -I./ffmpeg
utils/cmdutils.c: In function ‘log_callback_report’:
utils/cmdutils.c:114:9: error: ‘report_file_level’ undeclared (first use in this function)
     if (report_file_level >= level) {
         ^
utils/cmdutils.c:114:9: note: each undeclared identifier is reported only once for each function it appears in
utils/cmdutils.c:115:21: error: ‘report_file’ undeclared (first use in this function)
         fputs(line, report_file);
                     ^
utils/cmdutils.c: In function ‘parse_number_or_die’:
utils/cmdutils.c:148:17: warning: variable ‘error’ set but not used [-Wunused-but-set-variable]
     const char *error;
                 ^
utils/cmdutils.c: In function ‘show_help_children’:
utils/cmdutils.c:214:5: warning: suggest parentheses around assignment used as truth value [-Wparentheses]
     while (child = av_opt_child_class_next(class, child))
     ^
utils/cmdutils.c: In function ‘dump_argument’:
utils/cmdutils.c:481:12: warning: pointer targets in assignment differ in signedness [-Wpointer-sign]
     for (p = a; *p; p++)
            ^
utils/cmdutils.c:486:18: error: ‘report_file’ undeclared (first use in this function)
         fputs(a, report_file);
                  ^
utils/cmdutils.c:490:12: warning: pointer targets in assignment differ in signedness [-Wpointer-sign]
     for (p = a; *p; p++) {
            ^
utils/cmdutils.c: In function ‘parse_loglevel’:
utils/cmdutils.c:524:13: error: ‘report_file’ undeclared (first use in this function)
         if (report_file) {
             ^
utils/cmdutils.c: In function ‘split_commandline’:
utils/cmdutils.c:793:9: warning: multi-line comment [-Wcomment]
         //av_log(NULL, AV_LOG_ERROR, "Missing argument for option '%s'.\n", opt);\
         ^
utils/cmdutils.c:825:9: error: expected ‘while’ before ‘if’
         if (argv[optindex]) {
         ^
utils/cmdutils.c:953:13: error: invalid storage class for function ‘expand_filename_template’
 static void expand_filename_template(AVBPrint *bp, const char *template,
             ^
utils/cmdutils.c:981:12: error: invalid storage class for function ‘init_report’
 static int init_report(const char *env)
            ^
utils/cmdutils.c: In function ‘init_report’:
utils/cmdutils.c:991:9: error: ‘report_file’ undeclared (first use in this function)
     if (report_file) /* already opened */
         ^
utils/cmdutils.c:1013:13: error: ‘report_file_level’ undeclared (first use in this function)
             report_file_level = strtol(val, &tail, 10);
             ^
utils/cmdutils.c: In function ‘split_commandline’:
utils/cmdutils.c:1137:13: error: invalid storage class for function ‘print_all_libs_info’
 static void print_all_libs_info(int flags, int level)
             ^
utils/cmdutils.c: In function ‘print_all_libs_info’:
utils/cmdutils.c:1144:5: warning: ‘avresample_version’ is deprecated [-Wdeprecated-declarations]
     PRINT_LIB_INFO(avresample, AVRESAMPLE, flags, level);
     ^
In file included from utils/cmdutils.c:37:0:
./ffmpeg/libavresample/avresample.h:148:10: note: declared here
 unsigned avresample_version(void);
          ^
utils/cmdutils.c:1144:5: warning: ‘avresample_configuration’ is deprecated [-Wdeprecated-declarations]
     PRINT_LIB_INFO(avresample, AVRESAMPLE, flags, level);
     ^
In file included from utils/cmdutils.c:37:0:
./ffmpeg/libavresample/avresample.h:158:13: note: declared here
 const char *avresample_configuration(void);
             ^
utils/cmdutils.c: In function ‘split_commandline’:
utils/cmdutils.c:1150:13: error: invalid storage class for function ‘print_program_info’
 static void print_program_info(int flags, int level)
             ^
utils/cmdutils.c:1164:13: error: invalid storage class for function ‘print_buildconf’
 static void print_buildconf(int flags, int level)
             ^
utils/cmdutils.c:1292:12: error: invalid storage class for function ‘is_device’
 static int is_device(const AVClass *avclass)
            ^
utils/cmdutils.c:1299:12: error: invalid storage class for function ‘show_formats_devices’
 static int show_formats_devices(void *optctx, const char *opt, const char *arg, int device_only, int muxdemuxers)
            ^
utils/cmdutils.c:1395:13: error: invalid storage class for function ‘print_codec’
 static void print_codec(const AVCodec *c)
             ^
utils/cmdutils.c:1494:13: error: invalid storage class for function ‘get_media_type_char’
 static char get_media_type_char(enum AVMediaType type)
             ^
utils/cmdutils.c:1506:23: error: invalid storage class for function ‘next_codec_for_id’
 static const AVCodec *next_codec_for_id(enum AVCodecID id, const AVCodec *prev,
                       ^
utils/cmdutils.c: In function ‘next_codec_for_id’:
utils/cmdutils.c:1509:5: warning: ‘av_codec_next’ is deprecated [-Wdeprecated-declarations]
     while ((prev = av_codec_next(prev))) {
     ^
In file included from ./ffmpeg/libavformat/avformat.h:317:0,
                 from utils/cmdutils.c:34:
./ffmpeg/libavcodec/avcodec.h:4121:10: note: declared here
 AVCodec *av_codec_next(const AVCodec *c);
          ^
utils/cmdutils.c: In function ‘split_commandline’:
utils/cmdutils.c:1517:12: error: invalid storage class for function ‘compare_codec_desc’
 static int compare_codec_desc(const void *a, const void *b)
            ^
utils/cmdutils.c:1526:17: error: invalid storage class for function ‘get_codecs_sorted’
 static unsigned get_codecs_sorted(const AVCodecDescriptor ***rcodecs)
                 ^
utils/cmdutils.c:1547:13: error: invalid storage class for function ‘print_codecs_for_id’
 static void print_codecs_for_id(enum AVCodecID id, int encoder)
             ^
utils/cmdutils.c:1614:13: error: invalid storage class for function ‘print_codecs’
 static void print_codecs(int encoder)
             ^
utils/cmdutils.c: In function ‘show_colors’:
utils/cmdutils.c:1746:5: warning: suggest parentheses around assignment used as truth value [-Wparentheses]
     for (i = 0; name = av_get_known_color_name(i, &rgb); i++)
     ^
utils/cmdutils.c: In function ‘split_commandline’:
utils/cmdutils.c:1823:13: error: invalid storage class for function ‘show_help_codec’
 static void show_help_codec(const char *name, int encoder)
             ^
utils/cmdutils.c:1858:13: error: invalid storage class for function ‘show_help_demuxer’
 static void show_help_demuxer(const char *name)
             ^
utils/cmdutils.c:1876:13: error: invalid storage class for function ‘show_help_muxer’
 static void show_help_muxer(const char *name)
             ^
utils/cmdutils.c:1965:13: error: invalid storage class for function ‘show_help_bsf’
 static void show_help_bsf(const char *name)
             ^
utils/cmdutils.c: In function ‘filter_codec_opts’:
utils/cmdutils.c:2118:5: warning: suggest parentheses around assignment used as truth value [-Wparentheses]
     while (t = av_dict_get(opts, "", t, AV_DICT_IGNORE_SUFFIX)) {
     ^
utils/cmdutils.c: In function ‘split_commandline’:
utils/cmdutils.c:2202:1: error: expected declaration or statement at end of input
 }
 ^
utils/cmdutils.c:2202:1: error: expected declaration or statement at end of input
utils/cmdutils.c:2202:1: error: expected declaration or statement at end of input
utils/cmdutils.c:2202:1: error: expected declaration or statement at end of input
utils/cmdutils.c: At top level:
utils/cmdutils.c:69:12: warning: ‘init_report’ used but never defined
 static int init_report(const char *env);
            ^
utils/cmdutils.c: In function ‘split_commandline’:
utils/cmdutils.c:2202:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
Makefile:24: recipe for target 'utils/cmdutils.o' failed
make: *** [utils/cmdutils.o] Error 1
